--- a/vyla/static/admin/config.yml
+++ b/vyla/static/admin/config.yml
@@ -18,6 +18,9 @@ collections:
           - {label: Title, name: title, widget: string}
           - {label: Heading, name: heading, widget: string}
           - {label: Description, name: description, widget: string}
+          - {label: "Hero Image", name: image, widget: image}
+          - {label: "What we do", name: "what_we_do", widget: object, fields: [{label: Image, name: image, widget: image},{label: Alt, name: alt, widget: text},{label: Tagline, name: tagline, widget: text},{label: Content, name: content, widget: list, fields: [{label: Text, name: text, widget: text},{label: Text, name: text, widget: text},{label: Text, name: text, widget: text}]}]}
+          - {label: Mission, name: mission, widget: object, fields:[{label: Title, name: title, widget: text}, {label: Heading, name: heading, widget:text}, {label: Quote, name: quote, widget: text}, {label: "Citation Logo",name: "cite_logo",widget: image}, {label: "Citation Name", name: "cite_name", widget: text}, {label: "Citation Text", name: "cite_text", widget: text}, {label: Cards, name: cards, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Heading, name: heading, widget: text}, {label: List, name: list, widget: list, fields: [{label: "List Item", name: "list_item", widget: text}]}]}]}
           - {label: Offerings, name: offerings, widget: object, fields: [{label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
           - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
           - {label: "Meta Title", name: "meta_title", widget: "string"}
