--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
+    "netlify-cli": "^2.11.23",
     "remark-cli": "^6.0.1",
     "remark-preset-lint-recommended": "^3.0.2"
   }
