--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
   name: test-repo
+  #git-gateway
   branch: vyla-gatsby
 
 publish_mode: editorial_workflow
@@ -15,7 +16,7 @@ collections:
         name: "home"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "home-page"}
-          # - {label: Title, name: title, widget: string}
+          - {label: Title, name: title, widget: string}
           - {label: Heading, name: heading, widget: string}
           - {label: Description, name: description, widget: string}
           - {label: "Hero Image", name: image, widget: image}
