--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
-  name: test-repo
+  name: git-gateway
   #git-gateway
-  branch: gatsby-vyla
+  branch: master
 
 publish_mode: editorial_workflow
 media_folder: static/img
