--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   #git-gateway
-  branch: master
+  branch: gatsby-vyla
 
 publish_mode: editorial_workflow
 media_folder: static/img
