--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,7 @@ collections:
         name: "home"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "home-page"}
+          - {label: "Title", name: title, widget: string}
           - {label: Heading, name: heading, widget: string}
           - {label: Description, name: description, widget: string}
           - {label: "Hero Image", name: image, widget: image}
