refactor hero section

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,9 +17,9 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "home-page"}
           - {label: "Title", name: title, widget: string}
-          - {label: Heading, name: heading, widget: string}
-          - {label: Description, name: description, widget: string}
-          - {label: "Hero Image", name: image, widget: image}
+          # - {label: Heading, name: heading, widget: string}
+          # - {label: Description, name: description, widget: string}
+          - {label: "Hero Section", name: hero, widget: object, fields: [{label: Image, name: image, widget: image},{label: Heading, name: heading, widget: string},{label: Description, name: description, widget: text}]}
           - {label: "What we do", name: "what_we_do", widget: object, fields: [{label: Image, name: image, widget: image},{label: Alt, name: alt, widget: string},{label: Heading, name: heading, widget: string},{label: Tagline, name: tagline, widget: string},{label: Content, name: content, widget: list, fields: [{label: Text, name: text, widget: text}]}]}
           - {label: Mission, name: mission, widget: object, fields:[{label: Title, name: title, widget: string}, {label: Heading, name: heading, widget:string}, {label: Quote, name: quote, widget: text}, {label: "Citation Logo",name: "cite_logo",widget: image}, {label: "Citation Name", name: "cite_name", widget: string}, {label: "Citation Text", name: "cite_text", widget: text}, {label: Cards, name: cards, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Heading, name: heading, widget: string}, {label: "List Items", name: "list_items", widget: list}]}]}
           - {label: "Benefit Analysis", name: "benefit_analysis", widget: object, fields:[{label: Title, name: title, widget: string},{label: Heading, name: heading, widget: string}, {label: Cards, name: cards, widget: list, fields: [{label: Heading, name: heading, widget: string},{label: Content, name: content, widget: text}]}]}
