--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,6 +13,7 @@ collections:
       - file: "src/pages/index.md"
         label: "Home Page"
         name: "home"
+        title: "Vyla Home"
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "home-page"}
           - {label: "Title", name: title, widget: string}
