--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,7 +32,7 @@ collections:
           - {label: "Meta Title", name: "meta_title", widget: "string"}
           - {label: "Meta Description", name: "meta_description", widget: "text"}
           - {label: "Hero Section", name: hero, widget: object, fields: [{label: "Background Color", name: "background_color", widget: string}, {label: Image, name: image, widget: image},{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Content, name: content, widget: list, fields:[{label: Text, name: text, widget: text}]}]}
-          - {label: Story, name: story, widget: object, fields[{label: Title, name: title, widget: string},{label: Heading: name: heading, widget: text},{label: Image, name: image, widget: image},{label: Content, name: content, widget: list, fields[{label: Text, name: text, widget: text}]}]}
+          - {label: Story, name: story, widget: object, fields[{label: Title, name: title, widget: string},{label: Heading: name: heading, widget: text},{label: Image, name: image, widget: image},{label: Content, name: content, widget: list, fields: [{label: Text, name: text, widget: text}]}]}
           - {label: "Mission", name: mission, widget: object, fields:[{label: Title, name: title, widget: string}, {label: Heading, name: heading, widget:string}, {label: Cards, name: cards, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Heading, name: heading, widget: string}, {label: "List Items", name: "list_items", widget: list}]}]}
       - file: "src/pages/pricing/index.md"
         label: "Pricing Page"
