--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,6 +21,7 @@ collections:
           - {label: "Mission", name: mission, widget: object, fields:[{label: Title, name: title, widget: string}, {label: Heading, name: heading, widget:string}, {label: Cards, name: cards, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Heading, name: heading, widget: string}, {label: "List Items", name: "list_items", widget: list}]}]}
           - {label: "Quote section", name: quote, widget: object, fields:[{label: Quote, name: quote, widget: text}, {label: "Citation Logo",name: "cite_logo",widget: image}, {label: "Citation Name", name: "cite_name", widget: string}, {label: "Citation Text", name: "cite_text", widget: text},]}
           - {label: "Benefit Analysis", name: "benefit_analysis", widget: object, fields:[{label: Title, name: title, widget: string},{label: Heading, name: heading, widget: string}, {label: Cards, name: cards, widget: list, fields: [{label: Heading, name: heading, widget: string},{label: Content, name: content, widget: text}]}]}
+          - {label: "Button", name: button, widget: object, fields: [{label: Classes, name: classes, widget: string},{label: Text, name: text, widget: string}]}
           - {label: "Meta Title", name: "meta_title", widget: "string"}
           - {label: "Meta Description", name: "meta_description", widget: "text"}
       - file: "src/pages/about/index.md"
@@ -34,6 +35,7 @@ collections:
           - {label: "Hero Section", name: hero, widget: object, fields: [{label: "Background Color", name: "background_color", widget: string}, {label: Image, name: image, widget: image},{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Content, name: content, widget: list, fields:[{label: Text, name: text, widget: text}]}]}
           - {label: Story, name: story, widget: object, fields: [{label: Title, name: title, widget: string},{label: Heading, name: heading, widget: text},{label: Image, name: image, widget: image},{label: Content, name: content, widget: list, fields: [{label: Text, name: text, widget: text}]}]}
           - {label: "Mission", name: mission, widget: object, fields:[{label: Title, name: title, widget: string}, {label: Heading, name: heading, widget:string}, {label: Cards, name: cards, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Heading, name: heading, widget: string}, {label: "List Items", name: "list_items", widget: list}]}]}
+          - {label: "Button", name: button, widget: object, fields: [{label: Classes, name: classes, widget: string},{label: Text, name: text, widget: string}]}
       - file: "src/pages/thefarm/index.md"
         label: "The Farm Page"
         name: "thefarm"
@@ -43,17 +45,7 @@ collections:
           - {label: "Hero Section", name: hero, widget: object, fields: [{label: "Background Color", name: "background_color", widget: string}, {label: Image, name: image, widget: image},{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Content, name: content, widget: list, fields:[{label: Text, name: text, widget: text}]}]}
           - {label: Story, name: story, widget: object, fields: [{label: Title, name: title, widget: string},{label: Heading, name: heading, widget: text},{label: Image, name: image, widget: image},{label: Content, name: content, widget: list, fields: [{label: Text, name: text, widget: text}]}]}
           - {label: "Benefit Analysis", name: "benefit_analysis", widget: object, fields:[{label: Title, name: title, widget: string},{label: Heading, name: heading, widget: string}, {label: Cards, name: cards, widget: list, fields: [{label: Heading, name: heading, widget: string},{label: Content, name: content, widget: text}]}]}
-          - {label: "Meta Title", name: "meta_title", widget: "string"}
-          - {label: "Meta Description", name: "meta_description", widget: "text"}
-
-      - file: "src/pages/pricing/index.md"
-        label: "Pricing Page"
-        name: "pricing"
-        fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "pricing-page"}
-          - {label: Title, name: title, widget: string}
-          - {label: Image, name: image, widget: image}
-          - {label: Pricing, name: pricing, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: string}, {label: Plans, name: plans, widget: list, fields: [{label: Plan, name: plan, widget: string}, {label: Price, name: price, widget: string}, {label: Description, name: description, widget: string}, {label: Items, name: items, widget: list}]}]}
+          - {label: "Button", name: button, widget: object, fields: [{label: Classes, name: classes, widget: string},{label: Text, name: text, widget: string}]}
           - {label: "Meta Title", name: "meta_title", widget: "string"}
           - {label: "Meta Description", name: "meta_description", widget: "text"}
       - file: "src/pages/contact/index.md"
@@ -62,12 +54,10 @@ collections:
         fields:
           - {label: "Template Key", name: "templateKey", widget: "hidden", default: "contact-page"}
           - {label: Title, name: title, widget: string}
-          - {label: Image, name: image, widget: image}
-          - {label: "Background Color", name: background_color, widget: string}
-          - {label: Subtitle, name: subtitle, widget: string}
+          - {label: "Hero Section", name: hero, widget: object, fields: [{label: "Background Color", name: "background_color", widget: string}, {label: Image, name: image, widget: image},{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Content, name: content, widget: list, fields:[{label: Text, name: text, widget: text}]}]}
+          - {label: "Email", name: "email", widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Mail, name: mail, widget: string}]}
+          - {label: "Button", name: button, widget: object, fields: [{label: Classes, name: classes, widget: string},{label: Text, name: text, widget: string}]}
           - {label: "Meta Title", name: "meta_title", widget: "string"}
-          - {label: "Description", name: "description", widget: "text"}
-          - {label: "Email", name: "email", widget: "text"}
   - name: "blog"
     label: "Blog"
     folder: "src/pages/blog"
