--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gatsby-transformer-sharp": "^2.1.12",
     "lodash": "^4.17.11",
     "lodash-webpack-plugin": "^0.11.5",
-    "netlify-cms": "^2.3.3",
+    "netlify-cms-app": "^2.12.19",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
