--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
   command = "gatsby build"
-[build.environment]
-  YARN_VERSION = "1.22.4"
-  YARN_FLAGS = "--no-ignore-optional"
+# [build.environment]
+#   YARN_VERSION = "1.22.4"
+#   YARN_FLAGS = "--no-ignore-optional"
