--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-plx": "^1.3.15",
     "react-share": "^3.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3"
   },
