--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -240,6 +240,16 @@ collections:
                 ],
             }
           - {
+              label: Investors,
+              name: investors,
+              widget: object,
+              fields:
+                [
+                  { label: Logo, name: image, widget: image },
+                  { label: Text, name: text, widget: string },
+                ],
+            }
+          - {
               label: Team,
               name: team,
               widget: object,
