--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -246,7 +246,7 @@ collections:
               fields:
                 [
                   { label: Logo, name: logo, widget: image },
-                  { label: Text, name: text, widget: string },
+                  { label: Text, name: text, widget: text },
                 ],
             }
           - {
