edit CMS About Page.8

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -242,7 +242,7 @@ collections:
           - {
               label: Investors,
               name: investors,
-              widget: object,
+              widget: list,
               fields:
                 [
                   { label: Logo, name: logo, widget: image },
