--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -192,7 +192,7 @@ collections:
                       [
                         { label: Classes, name: classes, widget: string },
                         { label: Text, name: text, widget: string },
-                        { label: Link, name: link, widget.string },
+                        { label: Link, name: link, widget: string },
                       ],
                   },
                 ],
