--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -157,6 +157,7 @@ collections:
               widget: 'hidden',
               default: 'about-page',
             }
+          - { label: Title, name: title, widget: string }
           - {
               label: 'Hero Section',
               name: hero,
